feat: Add 4 Problems :dancer:

--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 
 \usepackage{hyperref}
 \usepackage{import}
+\usepackage{listings}
 
 \usepackage{xepersian}
 \settextfont[Path=fonts/]{Vazir.ttf}
@@ -9,7 +10,7 @@
 
 \usepackage{subfiles}
 
-\title{آزمون پایانی - آزمایشی}
+\title{آزمون پایانی}
 \author{پرهام الوانی}
 \date{بهار ۱۳۹۹}
 
@@ -17,6 +18,12 @@
 
     \maketitle
 
-    \subfile{hello-world/main}
+    \subfile{delete-duplicates/main}
+    \pagebreak
+    \subfile{majority-element/main}
+    \pagebreak
+    \subfile{debug-1/main}
+    \pagebreak
+    \subfile{debug-2/main}
 
 \end{document}
