fix: Correct Frac

--- a/majority-element/main.tex
+++ b/majority-element/main.tex
@@ -9,7 +9,7 @@
 
 \paragraph{قسمت دوم}
 عدد برتر در یک آرایه با اندازه \lr{n}
-عددی است که بیش از \lr{\(frac{n}{2}\)}
+عددی است که بیش از \lr{\(\frac{n}{2}\)}
 بار تکرار شده است.
 تابع زیر را در نظر بگیرید که در آن یک آرایه از اعداد صحیح به شما داده شده است.با فرض اینکه این آرایه حتما دارای عدد برتر است تابع را به شکلی تکمیل کنید که
 .این عدد را پیدا کرده و آن را بازگرداند
