feat: Add Problem Scores

--- a/debug-1/main.tex
+++ b/debug-1/main.tex
@@ -41,10 +41,19 @@
 چرا خروجی تابع محمد به شکل \lr{int}
 می‌باشد؟ اگر خروجی به شکل \lr{void} باشد چه مشکلی برای تابع فراخوانی کننده به وجود می‌آید؟
 
+\paragraph{}
+۲ نمره
+
 \paragraph{سوال دوم}
 خطای کد را توضیح داده و آن را اصلاح کنید.
 
+\paragraph{}
+۳ نمره
+
 \paragraph{سوال سوم}
 روش محمد برای محاسبه اجتماع را در یک خط توضیح دهید.
+
+\paragraph{}
+۲ نمره
 
 \end{document}
