feat: Add Final Version of Exam

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[paper=a4, fontsize=11pt]{article}
+\documentclass[fontsize=11pt]{article}
 
 \usepackage{hyperref}
 \usepackage{import}
@@ -10,7 +10,7 @@
 
 \usepackage{subfiles}
 
-\title{آزمون پایانی}
+\title{آزمون پایانی\\مبانی کامپیوتر و برنامه‌نویسی}
 \author{پرهام الوانی}
 \date{بهار ۱۳۹۹}
 
@@ -18,6 +18,8 @@
 
     \maketitle
 
+    \subfile{introduction/main}
+    \pagebreak
     \subfile{delete-duplicates/main}
     \pagebreak
     \subfile{majority-element/main}
@@ -25,5 +27,9 @@
     \subfile{debug-1/main}
     \pagebreak
     \subfile{debug-2/main}
+    \pagebreak
+    \subfile{anagram/main}
+    \pagebreak
+    \subfile{period/main}
 
 \end{document}
