feat: Final Revise

--- a/anagram/main.tex
+++ b/anagram/main.tex
@@ -3,10 +3,10 @@
 \begin{document}
 \section{آیا آناگرام}
 \paragraph{}
-دو رشته آناگرام می‌باشند اگر حروف آن‌ها تنها نابجایی از یکدیگر باشد.
+دو رشته آناگرام می‌باشند اگر حروف آن‌ها تنها جایگشتی از یکدیگر باشد.
 تابع زیر دو رشته که از حروف کوچک انگلیسی تشکیل شده‌اند را دریافت کرده و مشخص می‌کند
-آیا این دو آناگرام می‌باشند یا خیر.
-در صورتی که دو رشته آناگرام باشند خروجی برابر با یک و در غیر این صورت برابر با صفر می‌باشد.
+آیا این دو رشته آناگرام می‌باشند یا خیر.
+در صورتی که دو رشته آناگرام باشند خروجی این تابع برابر با یک و در غیر این صورت برابر با صفر می‌باشد.
 
 \begin{latin}
 \begin{lstlisting}[language=c]
@@ -44,6 +44,6 @@
 تعداد حروف کوچک انگلیسی برابر با ۲۶ می‌باشد.
 
 \paragraph{}
-۶ نمره
+۴ نمره
 
 \end{document}
