--- a/introduction/main.tex
+++ b/introduction/main.tex
@@ -10,7 +10,7 @@
 
 \paragraph{}
 من، ..........................................، به عنوان یک عضو فرهیخته از جامعه انسانی، تعهد مینمایم که اصول و قواعد متعارف در پاسخدهی
-شرافتمندانه به سواالت این امتحان را رعایت نمایم. به طور مشخص:
+شرافتمندانه به سوالات این امتحان را رعایت نمایم. به طور مشخص:
 
 \begin{itemize}
     \item  از هیچ فردی (خواه در این کلاس و خواه در خارج از کلاس) جهت پاسخدهی به تمام یا بخشی از این امتحان کمک نمیگیرم
