--- a/majority-element/main.tex
+++ b/majority-element/main.tex
@@ -11,8 +11,8 @@
 عدد برتر در یک آرایه با اندازه \lr{n}
 عددی است که بیش از \lr{\(\frac{n}{2}\)}
 بار تکرار شده است.
-تابع زیر را در نظر بگیرید که در آن یک آرایه از اعداد صحیح به شما داده شده است.با فرض اینکه این آرایه حتما دارای عدد برتر است تابع را به شکلی تکمیل کنید که
-.این عدد را پیدا کرده و آن را بازگرداند
+تابع زیر را در نظر بگیرید که در آن یک آرایه از اعداد صحیح به شما داده شده است. با فرض اینکه این آرایه حتما دارای عدد برتر است تابع را به شکلی تکمیل کنید که
+این عدد را پیدا کرده و آن را بازگرداند.
 در نظر داشته باشید که از قسمت اول می‌بایست در حل این قسمت استفاده کنید.
 
 \begin{latin}
@@ -38,6 +38,6 @@
 \end{latin}
 
 \paragraph{}
-۶ نمره
+۴ نمره
 
 \end{document}
