--- a/period/main.tex
+++ b/period/main.tex
@@ -40,12 +40,16 @@
 فرض کنید طول هر خط حداکثر برابر با ۲۰۰ کاراکتر می‌باشد.
 
 \paragraph{}
-۶ نمره
+۴ نمره
 
 \paragraph{قسمت دوم}
 فرض کنید طول خط‌ها از پیش مشخص نشده است.
 
 \paragraph{}
-۱۰ نمره
+۶ نمره
+
+\paragraph{نکات}
+در نظر داشته باشید که حتما در هنگام باز کردن فایل خطا را نیز مورد بررسی قرار دهید.
+مشخص است که در تنها نیاز به حل یکی از قسمت‌ها می‌باشد و حل هر دو قسمت نمره‌ی اضافه‌ای ندارد.
 
 \end{document}
