fix: Correct Period Problem

--- a/period/main.tex
+++ b/period/main.tex
@@ -10,7 +10,7 @@
 
 \begin{latin}
 \begin{lstlisting}[language=c]
-    int add_period(char* f1, char* f2) {
+    void add_period(char* f1, char* f2) {
         // your code goes here
     }
 \end{lstlisting}
