feat: Change Introduction Section for SBU

--- a/introduction/main.tex
+++ b/introduction/main.tex
@@ -3,10 +3,10 @@
 \begin{document}
 \section{پیش درآمد}
 \subsection{تعهدنامه}
-نام درس:‌ مبانی کامپیوتر و برنامه نویسی\\
+نام درس:‌ مبانی کامپیوتر و برنامه‌سازی\\
 نام استاد:‌ پرهام الوانی\\
 شماره دانشجویی:‌ \hspace{2em}\\
-تاریخ آزمون:‌ ۱۴ تیر ۱۳۹۹
+تاریخ آزمون:‌ ۲۱ تیر ۱۳۹۹
 
 \paragraph{}
 من، ..........................................، به عنوان یک عضو فرهیخته از جامعه انسانی، تعهد مینمایم که اصول و قواعد متعارف در پاسخدهی
