feat: Build Exam

--- a/main.tex
+++ b/main.tex
@@ -1,16 +1,16 @@
-\documentclass[fontsize=11pt]{article}
+\documentclass[]{article}
 
 \usepackage{hyperref}
 \usepackage{import}
 \usepackage{listings}
 
 \usepackage{xepersian}
-\settextfont[Path=fonts/]{Vazir.ttf}
-\setlatintextfont{Times New Roman}
+\settextfont{Vazir}
+\setlatintextfont{Roboto}
 
 \usepackage{subfiles}
 
-\title{آزمون پایانی\\مبانی کامپیوتر و برنامه‌نویسی}
+\title{آزمون پایانی\\مبانی کامپیوتر و برنامه‌سازی}
 \author{پرهام الوانی}
 \date{بهار ۱۳۹۹}
 
@@ -20,16 +20,12 @@
 
     \subfile{introduction/main}
     \pagebreak
-    \subfile{delete-duplicates/main}
+    \subfile{random-n-digits/main}
     \pagebreak
-    \subfile{majority-element/main}
+    \subfile{fib-in-file/main}
     \pagebreak
-    \subfile{debug-1/main}
+    \subfile{sorted-students/main}
     \pagebreak
-    \subfile{debug-2/main}
-    \pagebreak
-    \subfile{anagram/main}
-    \pagebreak
-    \subfile{period/main}
+    \subfile{to-upper/main}
 
 \end{document}
