fix: Correct Exam Introduction Issues

--- a/introduction/main.tex
+++ b/introduction/main.tex
@@ -24,7 +24,8 @@
 \begin{itemize}
     \item سوالات آزمون را می‌توانید به صورت تایپ شده یا دستی تحویل دهید.
     \item برای جلوگیری از هرگونه خطا یک نسخه از پاسخ‌های خودتان را در قالب آرشیو برای من ایمیل کنید.
-    \item در صورت هرگونه پرسش یا ابهام از سامانه نیما و کلاس جبرانی که به این منظور ایجاد شده است استفاده کنید.
+    %\item در صورت هرگونه پرسش یا ابهام از سامانه نیما و کلاس جبرانی که به این منظور ایجاد شده است استفاده کنید.
+    \item در صورت هرگونه پرسش یا ابهام از سامانه \lr{Adobe Connect} استفاده کنید.
     \item پاسخ به ۲۰ نمره از آزمون کفایت می‌کند و اضافه‌ی آن نمره‌ی امتیازی خواهد بود.
 \end{itemize}
 
