--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 
 \title{آزمون پایانی\\مبانی کامپیوتر و برنامه‌سازی}
 \author{پرهام الوانی}
-\date{بهار ۱۳۹۹}
+\date{نیم سال دوم ۹۹-۱۳۹۸}
 
 \begin{document}
 
