feat: Final Version of Exam

--- a/fib-in-file/main.tex
+++ b/fib-in-file/main.tex
@@ -5,7 +5,7 @@
 \paragraph{}
 تابع زیرا به شکلی تکمیل کنید 
 که جمله‌ی \lr{\textit{n}}ام فیبوناچی را محاسبه کرده
-و آن را در فایل داده شده یادداشت کند.
+و آن را در \textbf{انتهای} فایل داده شده یادداشت کند.
 در نظر داشته باشید عدد به صورت متنی نوشته می‌شود.
 
 \begin{latin}
@@ -36,7 +36,7 @@
 \end{latin}
 
 \paragraph{}
-۵ نمره
+۴ نمره
 
 \paragraph{نکات}
 در نظر داشته باشید که حتما در هنگام باز کردن فایل خطا را نیز مورد بررسی قرار دهید.
