--- a/main.tex
+++ b/main.tex
@@ -27,5 +27,7 @@
     \subfile{sorted-students/main}
     \pagebreak
     \subfile{to-upper/main}
+    \pagebreak
+    \subfile{debug-3/main}
 
 \end{document}
