--- a/random-n-digits/main.tex
+++ b/random-n-digits/main.tex
@@ -30,11 +30,13 @@
 
 
 \paragraph{}
-۵ نمره
+۶ نمره
 
 \paragraph{نکات}
-در نظر داشته باشید تعداد رقم‌هایی که به شما داده می‌شود به گونه‌ای است که حتما عدد حاصل در
+در نظر داشته باشید خروجی شما لزوما در قالب
 \lr{\textit{int}}
-قرار خواهد گرفت.
+جا نخواهد شد بنابراین می‌بایست از
+\lr{\textit{char[]}}
+برای نگهداری آن استفاده کنید.
 
 \end{document}
