--- a/to-upper/main.tex
+++ b/to-upper/main.tex
@@ -3,9 +3,10 @@
 \begin{document}
 \section{رشته بزرگ کردن}
 \paragraph{}
-تابع زیر یک رشته متشکل از حروف بزرگ و کوچک انگلیسی را گرفته
+تابع زیر یک رشته متشکل از حروف بزرگ، کوچک و اعداد انگلیسی را گرفته
 و تمامی حروف آن را بزرگ می‌کند. نتیجه نهایی در قالب یک رشته برای کاربر بازگشت داده می‌شود.
 در نظر داشته باشید که رشته‌ی ورودی کاربر نباید عوض شود.
+رشته‌ی خروجی می‌بایست حافظه‌ای دقیقا برابر با اندازه رشته‌ی اولیه اشغال کند.
 
 \begin{latin}
 \begin{lstlisting}[language=c]
@@ -32,9 +33,14 @@
     Input: aaBB
     Output: AABB
 \end{verbatim}
+
+\begin{verbatim}
+    Input: aaBB10a
+    Output: AABB10A
+\end{verbatim}
 \end{latin}
 
 \paragraph{}
-۶ نمره
+۴ نمره
 
 \end{document}
