feat: Generate SBU Midterm

--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 
 \usepackage{subfiles}
 
-\title{آزمون پایانی\\مبانی کامپیوتر و برنامه‌سازی}
+\title{آزمون میان‌ترم\\مبانی کامپیوتر و برنامه‌سازی}
 \author{پرهام الوانی}
 \date{نیم سال دوم ۹۹-۱۳۹۸}
 
@@ -18,16 +18,6 @@
 
     \maketitle
 
-    \subfile{introduction/main}
-    \pagebreak
-    \subfile{random-n-digits/main}
-    \pagebreak
-    \subfile{fib-in-file/main}
-    \pagebreak
-    \subfile{sorted-students/main}
-    \pagebreak
-    \subfile{to-upper/main}
-    \pagebreak
-    \subfile{debug-3/main}
+    \subfile{basketball/main}
 
 \end{document}
