--- a/basketball/main.tex
+++ b/basketball/main.tex
@@ -6,13 +6,13 @@
 \subsection{مقدمه}
 \paragraph{}
 رها پیش‌بینی مسابقات بسکتبال خیابانی را دوست دارد، محمدحسن و پرهام این بازی را دنبال می‌کنند اما می‌خواهند رها را خوشحال کنند
-برای این کار تصمیم می‌گیرند یک شبیه‌ساز برای این پیش‌بینی‌های این بازی بنویسند تا رها بتواند با آن بازی کند.
+برای این کار تصمیم می‌گیرند یک شبیه‌ساز برای پیش‌بینی‌ این بازی بنویسند تا رها بتواند با آن بازی کند.
 پرهام و محمدحسن که مشغول پروژه‌های شخصی هستند، این فرصت را به شما می‌دهند که به عنوان امتحان میان‌ترم، این شبیه‌سازی را پیاده‌سازی کنید.
 
 \subsection{در مورد شبیه‌ساز}
 \paragraph{}
 روش کار این شبیه‌ساز به این صورت است که تعدادی تیم در مسابقه وجود دارند (تیم‌ها ویژگی خاصی ندارد و با ترتیب ورودشان از هم جدا می‌شوند) 
-و بازی می‌کنند و به صورت رندوم برنده مشخص می‌شود و تعدادی کاربر روی برد این تیم‌ها پیش‌بینی می‌کنند.
+و بازی می‌کنند و به صورت تصادفی برنده مشخص می‌شود و تعدادی کاربر روی برد این تیم‌ها پیش‌بینی می‌کنند.
 در صورتی که تیمی که کاربر روی آن پیش‌بینی کرده \textbf{قهرمان} شود، وی برنده می‌شود.
 
 \paragraph{}
@@ -32,7 +32,6 @@
 (دقت کنید که حالت مساوی نداریم و حتما یک تیم برنده می‌شود و یک تیم بازنده.)
 امتیاز تیم برنده برابر با ۱ و تیم بازنده برابر با صفر خواهد بود.
 روند بازی‌ها برای چهار تیم به شکل زیر خواهد بود:
-
 
 \begin{latin}
 \begin{lstlisting}[]
@@ -265,7 +264,7 @@
     \item تا جایی که می‌توانید برنامه‌ی خود را به توابع معنی‌دار بشکنید. بهتر است هر تابع یک کار معین را انجام دهد.
     \item تعداد شرکت‌کننده‌ها و تیم‌ها هر کدام حداکثر ۱۰۰ می‌باشد و تضمین می‌شود بیشتر از این تعداد نخواهند بود.
     \item دقت کنید که کد ملیَ برنده‌ها باید به شکل صحیح (با صفرهای ابتدایی) چاپ شود. برای این موضوع در نظر داشته باشید که کد ملی با صفرهای ابتدایی دقیقا ۱۰ رقم است.
-    \item برای نگهداری کد ملی از متغیر صحیح استفاده کنید و در نظر داشته باشید که کد ملی از نظر عددی بزرگ می‌باشد.
+    \item برای نگهداری کد ملی از متغیر صحیح استفاده کنید و در نظر داشته باشید که کد ملی از نظر مقدار عددی بزرگ می‌باشد.
     \item برای پیاده‌سازی این پروژه تنها نیاز به آنچه \textbf{تا انتهای توابع} بحث شده است دارید اما استفاده از تمام ویژگی‌های زبان سی آزاد می‌باشد.
     \item در پیاده‌سازی این پروژه فقط از \textbf{زبان سی} استفاده کنید. در صورتی که برنامه شما برای اجرا نیاز به تنظیمات خاصی دارد یک راهنما برای اجرای برنامه بنویسید در فایل زیپتان همراه برنامه ارسال کنید.
     \item از آنجایی که این پروژه در قالب \textbf{امتحان میانترم} می‌باشد از تغییر دادن صورت مساله یا انجام موارد خارج از موارد مطرح شده خودداری کنید.
@@ -274,7 +273,7 @@
 \subsection{موارد امتیازی}
 
 \begin{enumerate}
-    \item شرکت‌کننده بتواند از پیش‌بینی انصراف دهد. انصراف به این ترتیب خواهد بود که تمامی پیش‌بینی‌های ایشان از لیست پیش‌بینی‌ها حذف خواهد شد. برای اینکار گزینه جدایی مثلا 4 را در نظر بگیرید.
+    \item شرکت‌کننده بتواند از پیش‌بینی انصراف دهد. انصراف به این ترتیب خواهد بود که تمامی پیش‌بینی‌های ایشان از لیست پیش‌بینی‌ها حذف خواهد شد. برای اینکار گزینه جدیدی مثلا 4 را در نظر بگیرید.
     \item چاپ جدول بازی‌ها: در انتهای بازی، همراه لیست برنده‌ها، جدول بازی‌ها و به همراه نتیجه‌شان چاپ شود.
     \item بازی‌ها به صورت حذفی باشند. به این ترتیب که تیم بازنده از دور بازی‌ها خارج شده و دیگر در بازی‌ها شرکت نمی‌کند.
 \end{enumerate}
