feat: Update Main Structure.

--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,14 @@
 \usepackage{hyperref}
 \usepackage{import}
 \usepackage{listings}
+\usepackage{geometry}
+\geometry{
+ a4paper,
+ left=2.2cm,
+ right=2.2cm,
+ top=2.5cm,
+ bottom=2.5cm
+}
 
 \usepackage[localise]{xepersian}
 \settextfont{Vazir}
@@ -19,5 +27,9 @@
     \maketitle
 
     \subfile{bodo-food/main}
+    \vspace*{\fill}
+    \begin{center}
+این سند برپایه بسته \متن‌لاتین{\زی‌پرشین} گونه \متن‌لاتین{\گونه‌زی‌پرشین} توسعه پیدا کرده است.
+    \end{center}
 
 \end{document}
