feat: Update Bodo Food

--- a/bodo-food/main.tex
+++ b/bodo-food/main.tex
@@ -77,7 +77,7 @@ int status[MAX];
 
 \پاراگراف{}
 در ابتدا منو فوق نمایش داده می‌شود. در این منو مدیر می‌تواند وارد یکی از زیر منوهای مربوط به پیک‌ها یا سفارشات شود.
-در نظر داشته باشید که در ابتدای منو تعداد پیک‌های آماده، تعداد کل پیک‌ها، تعداد سفارشات در دست اقدام و تعداد کل سفارشات نمایش داده میشود.
+در نظر داشته باشید که در ابتدای منو تعداد پیک‌های آماده، تعداد کل پیک‌ها، تعداد سفارشات در دست اقدام و تعداد کل سفارشات به اتمام رسیده نمایش داده میشود.
 
 \پاراگراف{}
 در صورتی که کاربر در هر یک از مراحل عددی خارج از اعداد منو را انتخاب کند، می‌بایست هیچ اتفاقی رخ ندهد.
@@ -259,7 +259,7 @@ int status[MAX];
     Welcome to bodo food, manager
 
     available couriers = 0
-    total couriers = 0
+    total couriers = 1
     on-going orders = 1
     finished orders = 0
 
@@ -276,7 +276,7 @@ int status[MAX];
     Welcome to bodo food, manager
 
     available couriers = 0
-    total couriers = 0
+    total couriers = 1
     on-going orders = 1
     finished orders = 0
 
@@ -284,14 +284,14 @@ int status[MAX];
 \end{lstlisting}
 \end{latin}
 
-در این قسمت، کاربر لیست سفارشات را گرفته است. طول این لیست با مقدار \متن‌لاتین{on-going orders} برابر است.
+در این قسمت، کاربر لیست سفارشات را گرفته است. طول این لیست با مقدار \متن‌لاتین{on-going orders} برابر است. در این قسمت فرض شده است ما دو پیک داشتیم، بنابراین هیچ پیک فعالی وجود ندارد چرا که هر دو پیک در حال حمل سفارش می‌باشند.
 
 \begin{latin}
 \begin{lstlisting}[]
     Welcome to bodo food, manager
 
     available couriers = 0
-    total couriers = 0
+    total couriers = 2
     on-going orders = 2
     finished orders = 0
 
@@ -306,14 +306,14 @@ int status[MAX];
 \end{lstlisting}
 \end{latin}
 
-در این قسمت، کاربر یک سفارش را خاتمه داده است. دقت داشته باشید که بعد از خاتمه یک سفارش مقدار \متن‌لاتین{on-going orders} و \متن‌لاتین{finished orders} به روزرسانی خواهند شد.
+در این قسمت، کاربر یک سفارش را خاتمه داده است. دقت داشته باشید که بعد از خاتمه یک سفارش مقدار \متن‌لاتین{on-going orders} و \متن‌لاتین{finished orders} به روزرسانی خواهند شد. در اینجا یک پیک از دو پیک فعال شده است چرا که سفارش خود را به اتمام رسانده است.
 
 \begin{latin}
 \begin{lstlisting}[]
     Welcome to bodo food, manager
 
-    available couriers = 0
-    total couriers = 0
+    available couriers = 1
+    total couriers = 1
     on-going orders = 1
     finished orders = 1
 
@@ -338,7 +338,7 @@ int status[MAX];
 
 \شروع{فقرات}
     \فقره برای پیاده‌سازی آرایه‌های سفارشات و پیک‌ها زمانی که یک پیک یا سفارش حذف می‌گردد یک خانه خالی ایجاد می‌شود، اگر بخواهیم این خانه خالی را پر کنیم و به جای آن یک خانه در انتها آرایه را خالی کنیم، آیا روشی با یک جابجایی وجود دارد؟ در نظر داشته باشید روش پیشنهادی به اندازه فاصله میان خانه خالی و ابتدای آرایه نیاز به جابجایی دارد.
-    \فقره برای سفارشات سود هم در نظر بگیرید و با اضافه کردن یک زیر منو با نام \متن‌لاتین{Results} و گزینه \متن‌لاتین{Profit} سود حاصل از سفارشات به پایان رسیده را اعلام کنید.
+    \فقره برای سفارشات سود هم در نظر بگیرید و با اضافه کردن یک زیر منو با نام \متن‌لاتین{Results} و گزینه \متن‌لاتین{Profit} سود حاصل از سفارشات به پایان رسیده را اعلام کنید. در نظر داشته باشید که شما می‌بایست این سود را برای هر سفارش از کاربر دریافت کنید.
     \فقره برای هر راننده تعداد سفارشات انجام شده را ذخیره کرده و آن را در یک زیر منو با نام \متن‌لاتین{Results} و گزینه \متن‌لاتین{OrdersPerCouriers} بیاورید. در نظر داشته باشید این گزینه نیاز به دریافت کد ملی پیک خواهد داشت.
     \فقره نمایش شماره همراه راننده در لیست سفارشات
     \فقره در هنگام خاتمه سفارش، زمان سپری شده از آغاز تا پایان سفارش نمایش داده شود. (در نظر داشته باشید برای انجام این قسمت به چیزی بیشتر از آنچه در کلاس آموخته‌ایم نیاز خواهید داشت)
