feat: Update Introduction

--- a/introduction/main.tex
+++ b/introduction/main.tex
@@ -1,33 +1,30 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-\section{پیش درآمد}
-\subsection{تعهدنامه}
-نام درس:‌ مبانی کامپیوتر و برنامه‌سازی\\
-نام استاد:‌ پرهام الوانی\\
-شماره دانشجویی:‌ \hspace{2em}\\
-تاریخ آزمون:‌ ۲۱ تیر ۱۳۹۹
+\قسمت{پیش درآمد}
+\زیرقسمت{تعهدنامه}
 
-\paragraph{}
-من، ..........................................، به عنوان یک عضو فرهیخته از جامعه انسانی، تعهد مینمایم که اصول و قواعد متعارف در پاسخدهی
+\پاراگراف{}
+من، \نقاط‌خ\نقاط‌خ\نقاط‌خ، به عنوان یک عضو فرهیخته از جامعه انسانی،
+تعهد مینمایم که اصول و قواعد متعارف در پاسخ‌دهی
 شرافتمندانه به سوالات این امتحان را رعایت نمایم. به طور مشخص:
 
-\begin{itemize}
-    \item  از هیچ فردی (خواه در این کلاس و خواه در خارج از کلاس) جهت پاسخدهی به تمام یا بخشی از این امتحان کمک نمیگیرم
-    و نیز به فرد دیگری کمک نخواهم کرد.
-    \item زمان در نظر گرفته شده برای امتحان را دقیقاً رعایت خواهم کرد.
-\end{itemize}
+\شروع{فقرات}
+    \فقره از هیچ فردی (خواه در این کلاس و خواه در خارج از کلاس) جهت پاسخدهی به تمام یا بخشی از
+    این امتحان کمک نمیگیرم و نیز به فرد دیگری کمک نخواهم کرد.
+    \فقره زمان در نظر گرفته شده برای امتحان را دقیقاً رعایت خواهم کرد.
+\پایان{فقرات}
 
 امضا
 
-\subsection{نکات}
-\begin{itemize}
-    \item سوالات آزمون را می‌توانید به صورت تایپ شده یا دستی تحویل دهید.
-    \item برای جلوگیری از هرگونه خطا یک نسخه از پاسخ‌های خودتان را در قالب آرشیو برای من ایمیل کنید.
-    %\item در صورت هرگونه پرسش یا ابهام از سامانه نیما و کلاس جبرانی که به این منظور ایجاد شده است استفاده کنید.
-    \item در صورت هرگونه پرسش یا ابهام از سامانه \lr{Adobe Connect} استفاده کنید.
-    \item پاسخ به ۲۰ نمره از آزمون کفایت می‌کند و اضافه‌ی آن نمره‌ی امتیازی خواهد بود.
-\end{itemize}
+\زیرقسمت{نکات}
+\شروع{فقرات}
+    \فقره سوالات آزمون را می‌توانید به صورت تایپ شده یا دستی تحویل دهید.
+    \فقره برای جلوگیری از هرگونه خطا یک نسخه از پاسخ‌های خودتان را در قالب آرشیو برای من ایمیل کنید.
+    \فقره در صورت هرگونه پرسش یا ابهام از کلاس برخط در حال برگزاری استفاده کنید.
+    \فقره پاسخ به ۲۰ نمره از آزمون کفایت می‌کند و اضافه‌ی آن نمره‌ی امتیازی خواهد بود.
+    \فقره پاسخ‌ها می‌بایست از بیان خودتان و به زبان فارسی باشند.
+\پایان{فقرات}
 
 
 \end{document}
