fix: Correct sorted students with file Question.

--- a/sorted-students-with-file/main.tex
+++ b/sorted-students-with-file/main.tex
@@ -3,7 +3,7 @@
 \begin{document}
 \قسمت{دانشجویان مرتب در فایل}
 \پاراگراف{}
-یک فایل باینری شامل تعدادی دانشجو در اختیار شما قرار دارد. برنامه‌ای بنویسید که اطلاعات این دانشجویان را از فایل خوانده و آن‌ها را با استفاده از تابع \همانطور|qsort| مرتبط کرده و دوباره داخل فایل بنویسد.
+یک فایل باینری شامل تعدادی دانشجو در اختیار شما قرار دارد. برنامه‌ای بنویسید که اطلاعات این دانشجویان را از فایل خوانده و آن‌ها را با استفاده از تابع \همانطور|qsort| بر اساس شماره دانشجویی مرتب کرده و دوباره داخل فایل بنویسد.
 در نظر داشته باشید شما که شما از پیش چیزی در مورد تعداد دانشجویان نمی‌دانید. (راهنمایی: استفاده از تابع \همانطور|realloc| می‌تواند به شما کمک کند.)
 
 \begin{latin}
