feat: Update Problem Description.

--- a/intersection/main.tex
+++ b/intersection/main.tex
@@ -4,6 +4,7 @@
 \قسمت{اشتراک لیست‌های پیوندی}
 \پاراگراف{}
 تابع زیر را به شکلی تکمیل کنید که با دریافت دو لیست پیوندی متشکل از اعداد صحیح اشتراک آن‌ها را محاسبه کرده و در قالب یک لیست پیوندی جدید برگرداند. پیشنهادی می‌شود برای این سوال توابعی که برای کار با لیست پیوندی لازم دارید پیاده‌سازی کرده و در نهایت تابع زیر را با استفاده از آن‌ها تکمیل کنید.
+در نظر داشته باشید که لیست‌های پیوندی ورودی حاوی عناصر تکراری نمی‌باشند.
 
 \begin{latin}
 \begin{minted}[bgcolor=LightGray]{c}
