feat: update parham exam style

--- a/main.tex
+++ b/main.tex
@@ -53,14 +53,7 @@
   \tableofcontents
   \pagebreak
 
-  \subfile{introduction/main}
-  \pagebreak
-  \subfile{unique/main}
-  \subfile{replace-spaces/main}
-  \subfile{intersection/main}
-  \subfile{sorted-students-with-file/main}
-  \subfile{debug-2/main}
-  \subfile{theory/main}
+  \subfile{basketball/main.tex}
   \vspace*{\fill}
   \begin{center}
 این سند برپایه بسته \متن‌لاتین{\زی‌پرشین} گونه \متن‌لاتین{\گونه‌زی‌پرشین} توسعه پیدا کرده است.
