--- a/parhamExam.sty
+++ b/parhamExam.sty
@@ -10,6 +10,7 @@
 }
 \eqenvironment{امتیازی}{extra}
 
+\setlength{\parindent}{0pt}
 \newcommand*{\university}[1]{\gdef\@university{#1}}
 \newcommand*{\duration}[1]{\gdef\@duration{#1}}
 \newcommand*{\exam}[1]{\gdef\@exam{#1}}
