--- a/parhamExam.sty
+++ b/parhamExam.sty
@@ -11,6 +11,8 @@
 \eqenvironment{امتیازی}{extra}
 
 \setlength{\parindent}{0pt}
+\renewcommand{\baselinestretch}{1.5}
+
 \newcommand*{\university}[1]{\gdef\@university{#1}}
 \newcommand*{\duration}[1]{\gdef\@duration{#1}}
 \newcommand*{\exam}[1]{\gdef\@exam{#1}}
