feat: update basketball problem

--- a/basketball/main.tex
+++ b/basketball/main.tex
@@ -256,10 +256,10 @@
 
 \زیرقسمت{موارد امتیازی}
 
-\begin{enumerate}
-    \item شرکت‌کننده بتواند از پیش‌بینی انصراف دهد. انصراف به این ترتیب خواهد بود که تمامی پیش‌بینی‌های ایشان از لیست پیش‌بینی‌ها حذف خواهد شد. برای اینکار گزینه جدیدی مثلا 4 را در نظر بگیرید.
-    \item چاپ جدول بازی‌ها: در انتهای بازی، همراه لیست برنده‌ها، جدول بازی‌ها و به همراه نتیجه‌شان چاپ شود.
-    \item بازی‌ها به صورت حذفی باشند. به این ترتیب که تیم بازنده از دور بازی‌ها خارج شده و دیگر در بازی‌ها شرکت نمی‌کند.
-\end{enumerate}
+\شروع{شمارش}
+    \فقره شرکت‌کننده بتواند از پیش‌بینی انصراف دهد. انصراف به این ترتیب خواهد بود که تمامی پیش‌بینی‌های ایشان از لیست پیش‌بینی‌ها حذف خواهد شد. برای اینکار گزینه جدیدی مثلا 4 را در نظر بگیرید.
+    \فقره چاپ جدول بازی‌ها: در انتهای بازی، همراه لیست برنده‌ها، جدول بازی‌ها و به همراه نتیجه‌شان چاپ شود.
+    \فقره بازی‌ها به صورت حذفی باشند. به این ترتیب که تیم بازنده از دور بازی‌ها خارج شده و دیگر در بازی‌ها شرکت نمی‌کند.
+\پایان{شمارش}
 
 \end{document}
