--- a/random-n-digits/main.tex
+++ b/random-n-digits/main.tex
@@ -2,41 +2,40 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-\section{عدد تصادفی n رقمی}
-\paragraph{}
+\قسمت{عدد تصادفی n رقمی}
+
 برنامه‌ای بنویسید که با دریافت عدد
-\lr{\textit{n}}
+$n$
 یک عدد تصادفی
-\lr{\textit{n}}
+$n$
 رقمی تولید کند.
 
-برای درک بهتر از عملکرد تابع به مثال‌های زیر توجه کنید:
+برای درک بهتر از عملکرد این تابع به مثال‌های زیر توجه کنید:
 
 \begin{latin}
-\begin{verbatim}
-    Input:
-        2
-    Output:
-        21
-\end{verbatim}
-
-\begin{verbatim}
-    Input:
-        5
-    Output:
-        12345
-\end{verbatim}
+\begin{minted}[]{output}
+Input:
+    2
+Output:
+    21
+\end{minted}
 \end{latin}
 
+\begin{latin}
+\begin{minted}[]{output}
+Input:
+    5
+Output:
+    12345
+\end{minted}
+\end{latin}
 
-\paragraph{}
 ۶ نمره
 
-\paragraph{نکات}
 در نظر داشته باشید خروجی شما لزوما در قالب
-\lr{\textit{int}}
+\lr{\mintinline{c}|int|}
 جا نخواهد شد بنابراین می‌بایست از
-\lr{\textit{char[]}}
+\lr{\mintinline{c}|char[]|}
 برای نگهداری آن استفاده کنید.
 
 \end{document}
